Addressed new comments, especially regarding loading the config file properties, atomic integer, and cleaning some deleted dependencies and comments.